--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "nanoid": "^5.1.6",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
