installed react-dropzone and multer. updated routes, comments were saving twice. can now amend a live booking and repost as pending to admin with comment thread between organiser and admin for full history.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "framer-motion": "^12.23.22",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "react-dropzone": "^14.3.8"
   }
 }
