--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
