--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
+    "sharp": "^0.34.4",
+    "swiper": "^12.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
