--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^12.23.24",
+    "idb": "^8.0.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -26,18 +27,20 @@
     "eject": "react-scripts eject"
   },
   "jest": {
-  "testEnvironment": "jsdom",
-  "transform": {
-    "^.+\\.[t|j]sx?$": "babel-jest"
-  },
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
     "transformIgnorePatterns": [
-    "node_modules/(?!react-router-dom)"
+      "node_modules/(?!react-router-dom)"
     ],
     "moduleNameMapper": {
-    "\\.(css|less|scss|sass)$": "identity-obj-proxy",
-    "^react-router-dom$": "<rootDir>/src/__mocks__/react-router-dom.js"
-  },
-  "setupFilesAfterEnv": ["<rootDir>/src/setupJest.js"]
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy",
+      "^react-router-dom$": "<rootDir>/src/__mocks__/react-router-dom.js"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupJest.js"
+    ]
   },
   "moduleNameMapper": {
     "\\.(css|less|scss|sass)$": "identity-obj-proxy",
