--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
   base = "frontend"
   publish = "build"
-  command = "npm ci --legacy-peer-deps && npm run build"
+  command = "npm ci --omit=dev && npm run build"
 
 [build.environment]
+  NODE_ENV = "production"
   CI = "false"
