--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "frontend"
-  publish = "build"
-  command = "npm ci --omit=dev --legacy-peer-deps && npm run build"
+  publish = "frontend/build"
+  command = "npm ci --legacy-peer-deps && npm run build"
 
 [build.environment]
   NODE_ENV = "production"
