--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
   base = "frontend"
   publish = "frontend/build"
-  command = "npm ci --legacy-peer-deps && npm run build"
+  command = "npm install --legacy-peer-deps && npm run build"
 
 [build.environment]
-  NODE_ENV = "production"
+  NODE_ENV = "development"
   CI = "false"
